tests/expectations/compiler/mappings/shadowed_mapping_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372009]: variable `one` shadowed by
    --> compiler-test:6:5
     |
   6 |     mapping one: field => field;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
"""]
